Revision history for No-Worries:

???	???
	* Portability fixes for process and pid file handling.

0.2	Mon Apr 30 2012
	* Improved documentation, portability and symbol export control.
	* Improved No::Worries::Log's handlers.
	* Added No::Worries::Proc's $Transient variable.
	* First version released in CPAN.

0.1	Wed Apr 25 2012
	* First version released.