@@ -13,7 +13,7 @@
 package No::Worries::Die;
 use strict;
 use warnings;
-our $VERSION  = "0.2_1";
+our $VERSION  = "0.2_2";
 our $REVISION = sprintf("%d.%02d", q$Revision: 1.12 $ =~ /(\d+)\.(\d+)/);
 
 #
